--- a/client/src/Components/Chatroom.css
+++ b/client/src/Components/Chatroom.css
@@ -1,13 +1,7 @@
 .collaspeArrow{
     font-size: 4rem;
 }
-.sideBar{
-    /* width: 15rem;
-    height:100rem;
-    padding:0;
-    margin: 0; */
-  
-}
+
 .mainChatRoom{
     color:#950740;
     background:#1A1A1D;
